--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <h1>MEU BLOG PESSOAL</h1>
-        <p>Meus ultimos posts:</p>
+        <p>Meus ultimos Posts:</p>
         <a href="/cadastro"><button class="btn btn-primary">CRIAR POST</button></a>
         <hr>
     
