integracao com o front-end

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container card">
         <div class="cardr-body">
             
-            <form action="/add" method="POST">
+            <form action="/views/add" method="POST">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Titulo:</label>
                     <input name="titulo" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
