--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HANDLEBARS</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
